adding one city to mapping 'quarzazate' to 'Ouarzazate'

--- a/cities_mapping.json
+++ b/cities_mapping.json
@@ -49,5 +49,6 @@
     "mohammadia": "Mohammedia",
     "tangier": "Tanger",
     "fez": "Fès",
-    "Méknés": "Meknès"
+    "Méknés": "Meknès",
+    "quarzazate": "Ouarzazate"
 }
