add more variations to cities mapping

--- a/cities_mapping.json
+++ b/cities_mapping.json
@@ -49,6 +49,9 @@
     "mohammadia": "Mohammedia",
     "tangier": "Tanger",
     "fez": "Fès",
-    "Méknés": "Meknès",
-    "quarzazate": "Ouarzazate"
+    "fés": "Fès",
+    "méknés": "Meknès",
+    "meekness": "Meknès",
+    "quarzazate": "Ouarzazate",
+    "tetuan": "Tétouan"
 }
