add schema creation code with sqlalchemy

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,10 @@ apache-airflow
 ipykernel
 numpy
 pandas
-json
 unidecode
+python-dotenv>=1.0.0
+sqlalchemy>=1.4.0
+# Database drivers
+psycopg2-binary>=2.9.0  # PostgreSQL driver
+snowflake-connector-python>=3.0.0  # Required for Snowflake
+snowflake-sqlalchemy>=1.4.0  # Snowflake SQLAlchemy support
