--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ sqlalchemy>=1.4.0
 psycopg2-binary>=2.9.0  # PostgreSQL driver
 snowflake-connector-python>=3.0.0  # Required for Snowflake
 snowflake-sqlalchemy>=1.4.0  # Snowflake SQLAlchemy support
+tqdm
