build the data model and integrate more data columns

--- a/models/.env.example
+++ b/models/.env.example
@@ -2,7 +2,7 @@
 DB_TYPE=postgres           # Options: postgres, snowflake
 
 # PostgreSQL Configuration
-POSTGRES_URL=               # Optional: Full connection URL
+# POSTGRES_URL=               # Optional: Full connection URL
 POSTGRES_USER=your_user
 POSTGRES_PASSWORD=your_password
 POSTGRES_HOST=localhost
