configure airflow dags

--- a/.env
+++ b/.env
@@ -1,6 +1,22 @@
-DB_TYPE=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DB=scopus_analysis
+# DB_TYPE=postgres
+# POSTGRES_USER=postgres
+# POSTGRES_PASSWORD=postgres
+# POSTGRES_HOST=localhost
+# POSTGRES_PORT=5432
+# POSTGRES_DB=scopus_analysis
+
+# PostgreSQL
+POSTGRES_USER=airflow
+POSTGRES_PASSWORD=airflow
+POSTGRES_DB=airflow
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5433
+
+# Airflow
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:5432/${POSTGRES_DB}
+AIRFLOW__CORE__EXECUTOR=LocalExecutor
+AIRFLOW__CORE__FERNET_KEY=your-generated-key
+AIRFLOW__WEBSERVER__SECRET_KEY=your-secret-key-here
+
+# Airflow Web Server
+AIRFLOW_WEBSERVER_PORT=8080
