--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .venv/
 # models/.env
+dags/__pycache__/
 models/__pycache__/
-notebooks/output/
 scripts/__pycache__/
+notebooks/output/
 # docker-compose.yaml
 Tasks.md
 scopus_analysis.sql
