--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-.venv/
-# models/.env
 __pycache__/
+.venv/
 dags/__pycache__/
 models/__pycache__/
 scripts/__pycache__/
+models/.env
+models/test_snowflake_connection.py
 notebooks/output/
-# docker-compose.yaml
 Tasks.md
+data/raw/scopus-demo
 scopus_analysis.sql
+
