--- a/airflow-docker/docker-compose.yaml
+++ b/airflow-docker/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_DB=${POSTGRES_AIRFLOW_DB}
       - POSTGRES_MULTIPLE_DATABASES=airflow,scopus_analysis
     ports:
       - "${POSTGRES_PORT}:5432"  # Host port mapped to container port 5432
