--- a/airflow-docker/.env
+++ b/airflow-docker/.env
@@ -8,12 +8,13 @@
 # PostgreSQL
 POSTGRES_USER=airflow
 POSTGRES_PASSWORD=airflow
-POSTGRES_DB=airflow
+POSTGRES_AIRFLOW_DB=airflow
+POSTGRES_PROJECT_DB=airflow
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5433
 
 # Airflow
-AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:5432/${POSTGRES_DB}
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:5432/${POSTGRES_AIRFLOW_DB}
 AIRFLOW__CORE__EXECUTOR=LocalExecutor
 AIRFLOW__CORE__FERNET_KEY=your-generated-key
 AIRFLOW__WEBSERVER__SECRET_KEY=your-secret-key-here
