--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,9 @@ __pycache__/
 dags/__pycache__/
 models/__pycache__/
 scripts/__pycache__/
-models/.env
+models/.env.local
 models/test_snowflake_connection.py
 notebooks/output/
 Tasks.md
 data/raw/scopus-demo
 scopus_analysis.sql
-
