--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ __pycache__/
 dags/__pycache__/
 models/__pycache__/
 scripts/__pycache__/
-models/.env.local
+models/.env
 models/test_snowflake_connection.py
 notebooks/output/
 Tasks.md
